global temp chart

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Global temperature</title>
   </head>
   <body>
+    <canvas class="js-chart" </canvas>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
+      integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./js/papaparse.min.js"></script>
     <script type="module" src="./js/index.js"></script>
   </body>
