--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <h1 class="header__title">Global temperature</h1>
-      <h2 class="header__theme">Zonal annual means</h2>
+      <h2 class="header__theme">zonal annual means</h2>
 
     </header>
     <canvas class="js-chart" </canvas>
