--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Global temperature</title>
   </head>
   <body>
     <header class="header">
       <h1 class="header__title">Global temperature</h1>
       <h2 class="header__theme">zonal annual means</h2>
-
     </header>
-    <canvas class="js-chart" </canvas>
+    <main class="main">
+      <canvas class="js-chart"></canvas>
+    </main>
+    <footer class="footer">
+      <div class="footer-container">
+        <hr />
+        <p class="footer-container__text">
+          © Site design. Vitaliy Gerassimov, 2022
+        </p>
+      </div>
+    </footer>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
       integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA=="
