--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="footer-container">
         <hr />
         <p class="footer-container__text">
-          © Site design. Vitaliy Gerassimov, 2022
+          © Design by Vitaliy Gerassimov, 2022
         </p>
       </div>
     </footer>
